# testing-github-actions

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.github/workflows/: rust.yml
assets/: generate_sw.ps1  initializer.js  manifest.json  sw.js
src/: app.rs  main.rs
src/app/: editor.rs  icons.rs  osm.rs  osmchange.rs  places.rs  providers.rs  windows.rs  worker.rs
src/app/editor/: attribute2d.rs  cache.rs  consts.rs  r_star.rs  states.rs  visual.rs
src/app/editor/consts/: osm.rs  shortcuts.rs
